# tank_royal_manager

./: .gitignore  Dockerfile  README.md  bots.py  controller.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  simplelogger.properties
manager/: bot_manager.py  controller_manager.py  event_manager.py  game_types.py
robocode_event_models/: bot_address.py  bot_death_event.py  bot_handshake.py  bot_info.py  bot_intent.py  bot_list_update.py  bot_ready.py  bot_results_for_bot.py  bot_state_with_id.py  bullet_fired_event.py  bullet_hit_bot_event.py  bullet_hit_bullet_event.py  bullet_hit_wall_event.py  controller_handshake.py  file.py  game_aborted_event.py  game_ended_event_for_observer.py  game_paused_event_for_observer.py  game_resumed_event_for_observer.py  game_started_event_for_bot.py  game_started_event_for_observer.py  hit_by_bullet_event.py  initial_position.py  message.py  next_turn.py  participant.py  pause_game.py  resume_game.py  round_ended_event.py  round_started_event.py  scanned_bot_event.py  server_handshake.py  skipped_turn_event.py  start_game.py  stop_game.py  tick_event_for_bot.py  tick_event_for_observer.py
schemas/: gen.sh
schemas/json/: bot_address.json  bot_death_event.json  bot_handshake.json  bot_intent.json  bot_ready.json  bot_results_for_bot.json  bot_results_for_observer.json  bot_state.json  bullet_hit_bot_event.json  event.json  file.json  game_ended_event_for_bot.json  game_paused_event_for_observer.json  game_setup.json  game_started_event_for_bot.json  game_started_event_for_observer.json  message.json  (+7 more)
(+119 files in other folders)
